# ArchScan

./: ArchScan.py  Dados.txt  README.md  scanner.py
rust/: Cargo.toml  archscan
rust/src/: app.rs  main.rs  models.rs
rust/src/scanner/: mod.rs  ports.rs  tcp.rs  udp.rs
